kube/service.yml
kind: Service
apiVersion: v1
metadata:
  name: todo-service
  namespace: todo-grupo6
spec:
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
