kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /todo
            backend:
              service:
                name: todo-service
                port:
                  number: 8080
